--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+					<cloudHubDeployment>
+					</cloudHubDeployment>	
 				</configuration>
 			</plugin>
 		</plugins>
