--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
+						<muleVersion>4.3.0</muleVersion>
 					</cloudHubDeployment>	
 				</configuration>
 			</plugin>
