--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 						<applicationName>${anypoint.applicationName}</applicationName>
 						<muleVersion>${anypoint.muleVersion}</muleVersion>
 						<objectStoreV2>true</objectStoreV2>
+						<objectStoreV1>false</objectStoreV1>
 					</cloudHubDeployment>	
 				</configuration>
 			</plugin>
